objects/Enrollment_Code__c.object
<CustomObject>
    <description>This object represents the code associated with an Enterprise Training Agreement and holds the status the enrollment code is in.</description>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enterprise_Training_Agreement__c</fullName>
        <description>Enterprise Training Agreement the Enrollment Code is associated with.</description>
        <inlineHelpText>Enterprise Training Agreement the Enrollment Code is associated with.</inlineHelpText>
        <label>Enterprise Training Agreement</label>
        <referenceTo>Enterprise_Training_Agreement__c</referenceTo>
        <relationshipLabel>Enrollment Codes</relationshipLabel>
        <relationshipName>Enrollment_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Self_Enrollment_URL__c</fullName>
        <formula>$Setup.Training_Agreement_Settings__c.Self_Enrollment_Unauthenticated_URL__c  &amp; Code__c</formula>
        <label>Self-Enrollment URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Enrollment Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Enrollment Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Enrollment_Code_more_than_One</fullName>
        <active>true</active>
        <description>This rule prevents Enterprise Training Agreements from having more than 1 active Enrollment Code at a time.</description>
        <errorConditionFormula>AND(
    Enterprise_Training_Agreement__r.Enrollment_Codes_Count__c &gt;= 1
    ,ISPICKVAL(Status__c , &quot;Active&quot;)
    ,OR(
        ISNEW()
        ,TEXT(PRIORVALUE(Status__c)) != &quot;Active&quot;   
    )
)</errorConditionFormula>
        <errorMessage>This Training Agreement already has an active Enrollment Code. Please revoke the existing active Enrollment Code before creating a new active code.</errorMessage>
    </validationRules>
</CustomObject>